RESOLVED FIXED242980
hide private builtins from exception stack traces
https://bugs.webkit.org/show_bug.cgi?id=242980
Summary hide private builtins from exception stack traces
Devin Rousso
Reported 2022-07-20 20:31:13 PDT
.
Attachments
Devin Rousso
Comment 1 2022-07-20 20:33:03 PDT
EWS
Comment 2 2022-07-21 10:58:39 PDT
Committed 252693@main (8d17ce89dc8b): <https://commits.webkit.org/252693@main> Reviewed commits have been landed. Closing PR #2607 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-21 10:59:16 PDT
Note You need to log in before you can comment on or make changes to this bug.