hide private builtins from exception stack traces https://bugs.webkit.org/show_bug.cgi?id=242980

Reviewed by Yusuke Suzuki.

Private builtins are really just an implementation detail, and as such should not be exposed to developers.

* Source/JavaScriptCore/interpreter/Interpreter.cpp:
(JSC::GetStackTraceFunctor::operator() const):

* Source/JavaScriptCore/inspector/ScriptCallStackFactory.cpp:
(Inspector::CreateScriptCallStackFunctor::operator() const):
Drive-by: Move the `ImplementationVisibility` check after the `needToSkipAFrame` check to make it
          easier for callers to reason about the value to provide.

* LayoutTests/inspector/console/message-stack-trace-expected.txt:
* LayoutTests/inspector/debugger/js-stacktrace-expected.txt:
* LayoutTests/inspector/model/remote-object/error-expected.txt:

Canonical link: https://commits.webkit.org/252693@main